# formenos

./: .pre-commit-config.yaml  README.md
backend/: .coveragerc  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: model_catalog.py
backend/app/clients/: base_client.py  gitlab.py  mlflow.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/kubernetes/: base_resource.py  kserve_resource.py
backend/app/schemas/: model_catalog.py
backend/app/utils/: instance_utils.py
backend/tests/: conftest.py  mlflow_test_data.py
backend/tests/api/: test_mlflow_registry.py
backend/tests/clients/: test_base_client.py  test_gitlab_client.py  test_mlflow_client.py
backend/tests/core/: test_config.py
backend/tests/kubernetes/: test_kserve_resource.py
